--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,13 +8,19 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
+            "skipFiles": ["<node_internals>/**"],
             "program": "${workspaceFolder}\\src\\index.ts",
-            "outFiles": [
-                "${workspaceFolder}/**/*.js"
-            ]
+            "outFiles": ["${workspaceFolder}/**/*.js"]
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Debug AVA test file",
+            "program": "${workspaceFolder}/node_modules/ava/entrypoints/cli.mjs",
+            "args": ["${file}"],
+            "outputCapture": "std",
+            "console": "integratedTerminal", // optional
+            "skipFiles": ["<node_internals>/**/*.js"]
         }
     ]
 }
