--- a/package.json
+++ b/package.json
@@ -1,24 +1,47 @@
 {
-  "name": "DocuMooer",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "cd src/ && nodemon --ext ts --exec \"tsc && node ../out/index.js\""
-  },
-  "keywords": [],
-  "author": "",
-  "license": "Apache-2.0",
-  "dependencies": {
-    "comment-parser": "^1.4.1",
-    "mustache": "^4.2.0",
-    "typescript": "^5.4.2",
-    "typescript-parser": "^2.6.1"
-  },
-  "devDependencies": {
-    "@types/mustache": "^4.2.5",
-    "@types/node": "^20.11.25",
-    "nodemon": "^3.1.0"
-  }
+    "name": "documoore",
+    "version": "1.0.0",
+    "description": "",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "files": [
+        "/dist"
+    ],
+    "scripts": {
+        "build": "tsc",
+        "test": "jest",
+        "watch": "cd src/ && nodemon --ext ts --exec \"tsc && node ../out/index.js\"",
+        "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
+        "lint": "eslint --ext .ts"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "Apache-2.0",
+    "dependencies": {
+        "comment-parser": "^1.4.1",
+        "mustache": "^4.2.0",
+        "typescript": "^5.4.2",
+        "typescript-parser": "^2.6.1"
+    },
+    "devDependencies": {
+        "@ava/typescript": "^4.1.0",
+        "@eslint/js": "^9.1.1",
+        "@types/jest": "^29.5.12",
+        "@types/mustache": "^4.2.5",
+        "@types/node": "^20.11.25",
+        "@typescript-eslint/eslint-plugin": "^7.7.1",
+        "@typescript-eslint/parser": "^7.7.1",
+        "esbuild": "^0.20.2",
+        "esbuild-jest": "^0.5.0",
+        "eslint": "^8.57.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.1.3",
+        "globals": "^15.1.0",
+        "jest": "^29.7.0",
+        "nodemon": "^3.1.0",
+        "prettier": "^3.2.5",
+        "prettier-eslint": "^16.3.0",
+        "ts-jest": "^29.1.2",
+        "typescript-eslint": "^7.7.1"
+    }
 }
